--- a/a1/a1/a1.csproj
+++ b/a1/a1/a1.csproj
@@ -234,6 +234,7 @@
     <Content Include="Scripts\jquery-3.5.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.5.1.min.map" />
     <Content Include="Views\Venues\Index.cshtml" />
+    <Content Include="Views\Venues\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
